spacing fixes

--- a/css/socktober.css
+++ b/css/socktober.css
@@ -168,7 +168,7 @@ a.navbar-item{
         background: white;
     }
     .spacr {
-        margin-top: 0.5rem;
+        margin-top: 1rem;
     }
     .story:hover:not(.mid) {
         color: white;
